<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hai_binarian"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mau_makan_apa_hari_ini"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="409dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <ImageView
                android:contentDescription="@string/gambar_makanan"
                android:id="@+id/imageView2"
                android:layout_width="89dp"
                android:layout_height="81dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.507"
                android:src="@drawable/food" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/diskon_30"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pesan_makanan_lewat_aplikasi_dan_dapatkan_diskonmu"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <HorizontalScrollView
        android:paddingTop="10dp"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">
            <include layout="@layout/kategori_makanan"/>
            <include layout="@layout/kategori_makanan"/>
            <include layout="@layout/kategori_makanan"/>
            <include layout="@layout/kategori_makanan"/>
            <include layout="@layout/kategori_makanan"/>
            <include layout="@layout/kategori_makanan"/>
        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/item_menu_makanan"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/item_menu_makanan"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/item_menu_makanan"
        android:text="@string/list_menu_makanan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/item_menu_makanan" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_foods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
 />


    <!--    <TableLayout-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="253dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView7">-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="clip_vertical|center_horizontal"-->
<!--            android:orientation="horizontal">-->

<!--            <include-->
<!--                layout="@layout/item_makanan"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="20dp" />-->

<!--            <include-->
<!--                layout="@layout/item_makanan"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="20dp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="clip_vertical|center_horizontal"-->
<!--            android:orientation="horizontal">-->
<!--            <include-->
<!--                layout="@layout/item_makanan"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="20dp"/>-->

<!--            <include-->
<!--                layout="@layout/item_makanan"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content" />-->
<!--        </TableRow>-->

<!--    </TableLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>